--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,11 @@
 .nav-links-desk > * {
   @apply mr-12 text-lg;
 }
+
+.footer-links {
+  @apply w-1/2 flex flex-col;
+}
+
+.footer-links a {
+  @apply mb-4;
+}
